# finrizika-backend

./: .env  .gitignore  Dockerfile  docker-compose.yml  pom.xml
fastapi/: Dockerfile  README.md  companydocumentcomparer.py  companydocumentreader.py  healthchecker.py  main.py  persondocumentreader.py  pyproject.toml
sql_dumps/: user.sql  user_logins
src/main/java/com/finrizika/app/: AppApplication.java  AuthInterceptor.java  Company.java  CompanyController.java  CompanyData.java  CompanyDataController.java  CompanyDataCreateDTO.java  CompanyDataRepository.java  CompanyDataResponseDTO.java  CompanyDataService.java  CompanyInfo.java  CompanyInfoController.java  CompanyInfoRepository.java  CompanyInfoService.java  CompanyInfoServiceImpl.java  CompanyRepository.java  CompanyService.java  CorsConfig.java  Credit.java  CreditApplication.java  CreditApplicationRepository.java  CreditRepository.java  Document.java  DocumentRepository.java  Employment.java  EmploymentRepository.java  Individual.java  JpaRepository.java  Payment.java  Person.java  (+15 more)
src/main/resources/: application.properties
src/main/resources/static/: index.html
src/main/resources/static/assets/: index-3U4YEAqG.css  index-3nYmkbwx.js  index-6PqpLRci.js  index-BpIu9yHl.css  index-Bv0Bi7iF.js  index-C2HnfsWP.js  index-CKnHFPVJ.js  index-CgCbkHw4.js  index-CqKTgeJJ.js  index-Ct0B-okT.css  index-DHlP9F7O.css  index-DTx593ll.js  index-DmVuscal.css  index-DncMPSv_.js  index-J8p1NH4d.css
tests/: application_test.http  credit_test.http  employment_test.http  payments_test.http  person_test.http  user_test.http
(+2 files in other folders)
