[project]
name = "finrizika-document-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.1",
    "lxml>=6.1.0",
    "ollama>=0.6.2",
    "pdfplumber>=0.11.9",
    "python-multipart>=0.0.27",
]
